# PrimerPioneer

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  supervisor_workflow.py
common_utils/: file_operations.py  loadSequence.py  sequence.py
data/: RTCB.fasta  pcDNA3.1(-).dna
data/rag_db/: chroma.sqlite3
multi_agent_system/: .gitignore  langgraph.json  supervisor_workflow.py
multi_agent_system/data/temp/: MARCO_amplicon.json  MARCO_in_pcDNA3.1.json  MARCO_pcDNA3.1_ligated.json  pcDNA3.1(-).json
multi_agent_system/tools_pool/HW1_demo/: tools.py
multi_agent_system/tools_pool/HW1_demo/logic/: fasta_utils.py  pick_restric_enzym_pairs.py  primer_design.py
multi_agent_system/tools_pool/v0/: pyproject.toml  tools.py
multi_agent_system/tools_pool/v0/common_utils/: file_operations.py  sequence_tools.py
src/: supervisor_workflow.py
src/tools_pool/HW1_demo/: tools.py
src/tools_pool/v0/: main.py
tools_pool/: Schema.md  annotate_features.py  annotate_map.py  design_primer_suite.py  evaluate_sequence.py  find_features.py  generate_map.py  get_cds.py  get_sequence_info.py  simulate_a_tailing.py  simulate_dna_synthesis.py  simulate_end_repair.py  simulate_gel_purification.py  simulate_homology_assembly.py  simulate_ligation.py  simulate_oligo_annealing.py  simulate_pcr.py  simulate_phosphorylation.py  simulate_restriction_digestion.py  strategy_query.py
tools_pool/HW1_demo/logic/: ncbi_cds.py
tools_pool/v0/tools_pool/: design_primer_suite.py  select_cloning_strategy.py  simulate_ligation.py  simulate_phosphorylation.py
(+30 files in other folders)
